--- a/.github/workflows/NexaAPI.yml
+++ b/.github/workflows/NexaAPI.yml
@@ -1,10 +1,20 @@
 name: Nexa API Integration Testing
 on:
- push:
+  push:
+    branches:
+      - main 
 jobs:
-  SendOTPAPI :
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      -
-        name: Nexa API 
-        run: echo "Hello world! I am new"
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: 11
+
+      - name: Build and test with Maven
+        run: mvn clean test TestNG.xml
