--- a/.github/workflows/NexaAPI.yml
+++ b/.github/workflows/NexaAPI.yml
@@ -1,12 +1,25 @@
 name: Nexa API Integration Testing
+
 on:
- push:
+  push:
     branches:
-      - main 
+      - main
+  schedule:
+    - cron: '15 14 * * 0,1,2,3,4,5'
+    - cron: '30 5 * * 0,1,2,3,4,5'
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: RUN Maven
-        run: mvn clean test 
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+
+      - name: Build with Maven
+        run: mvn clean test
