--- a/.github/workflows/NexaAPI.yml
+++ b/.github/workflows/NexaAPI.yml
@@ -23,4 +23,5 @@ jobs:
           distribution: 'adopt'
 
       - name: Build with Maven
+        working-directory: ./API_Slack_Integration_Testing/nexa_api-master
         run: mvn clean test
