--- a/.github/workflows/NexaAPI.yml
+++ b/.github/workflows/NexaAPI.yml
@@ -23,5 +23,23 @@ jobs:
           distribution: 'adopt'
 
       - name: Build with Maven
-        working-directory: nexa_api-master
-        run: mvn clean test
+        working-directory: nexa_api-master  # Specify the directory where pom.xml exists
+        run: |
+          mvn clean test | tee result.log  # Pipe output to a file for further processing
+          echo "##vso[task.setvariable variable=percent]$(grep -oP '\d+(?=% Passed)' result.log)"
+
+      - name: Validate Passed Rate
+        if: ${{ github.event.inputs.UP_STREAM != '' }}
+        run: |
+          echo "${{ env.percent }}% Passed Rate"
+          # Replace with your validation logic using the passed rate
+          # Example: echo "$PERCENTAGE, $SHA, $REPO"
+
+          # Assuming the validate-dev-repo action script usage
+          # uses: ./.github/actions/validate-dev-repo
+          # with:
+          #   PERCENTAGE: ${{ env.percent }}
+          #   SHA: ${{ github.sha }}
+          #   REPO: ${{ github.repository }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.ORG_TOKEN }}
