--- a/.github/workflows/NexaAPI.yml
+++ b/.github/workflows/NexaAPI.yml
@@ -24,6 +24,10 @@ on:
         options:
           - stage
           - Prod
+      UP_STREAM:
+        description: "Upstream status"
+        default: ""
+        required: false
 
 jobs:
   build:
@@ -40,18 +44,18 @@ jobs:
           distribution: 'adopt'
 
       - name: Build with Maven
-        id: test
+        id: build_maven
         working-directory: nexa_api-master  # Specify the directory where pom.xml exists
         run: |
           mvn clean test -DxmlSuite=${{ github.event.inputs.XML_SUITE }} -Dgroups=${{ github.event.inputs.GROUPS }} -Denv=${{ github.event.inputs.ENV }} | tee result.log
           percent=$(grep -oP '\d+(?=% Passed)' result.log || echo '0')
-          echo "percent=$percent" >> $GITHUB_ENV
+          echo "::set-output name=percent::$percent"
 
       - name: Validate Passed Rate
         if: ${{ github.event.inputs.UP_STREAM != '' }}
         uses: ./.github/actions/validate-dev-repo
         with:
-          PERCENTAGE: ${{ env.percent }}
+          PERCENTAGE: ${{ steps.build_maven.outputs.percent }}
           SHA: ${{ github.sha }}
           REPO: ${{ github.repository }}
         env:
