--- a/.github/workflows/NexaAPI.yml
+++ b/.github/workflows/NexaAPI.yml
@@ -61,8 +61,50 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.ORG_TOKEN }}
 
-      - name: Send notification to Slack
-        if: always()
+      - name: Send notification to Slack (Success with 100% passed)
+        if: success() && steps.build_maven.outputs.percent == '100'
+        uses: slackapi/slack-github-action@v1.23.0
+        with:
+          payload: |
+            {
+              "channel": "#your-slack-channel",
+              "attachments": [
+                {
+                  "color": "good",
+                  "title": "Nexa API Integration Testing",
+                  "fields": [
+                    {
+                      "title": "Status",
+                      "value": "Success",
+                      "short": true
+                    },
+                    {
+                      "title": "Passed Percentage",
+                      "value": "100%",
+                      "short": true
+                    },
+                    {
+                      "title": "Branch",
+                      "value": "${{ github.ref }}",
+                      "short": true
+                    },
+                    {
+                      "title": "Commit",
+                      "value": "${{ github.sha }}",
+                      "short": true
+                    }
+                  ],
+                  "footer": "GitHub Actions",
+                  "footer_icon": "https://github.githubassets.com/favicon.ico",
+                  "ts": $(date +%s)
+                }
+              ]
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
+      - name: Send notification to Slack (Failure or not 100% passed)
+        if: failure() || steps.build_maven.outputs.percent != '100'
         uses: slackapi/slack-github-action@v1.23.0
         with:
           payload: |
@@ -70,7 +112,7 @@ jobs:
               "channel": "slackintegrationnexa",
               "attachments": [
                 {
-                  "color": "${{ job.status == 'success' && steps.build_maven.outputs.percent == '100' ? 'good' : 'danger' }}",
+                  "color": "danger",
                   "title": "Nexa API Integration Testing",
                   "fields": [
                     {
