--- a/.github/workflows/NexaAPI.yml
+++ b/.github/workflows/NexaAPI.yml
@@ -1,62 +1,47 @@
-name: Nexa API Integration Testing
+name: Docker Build and Push
 
 on:
   push:
-    branches:
-      - main
-  schedule:
-    - cron: '15 14 * * 0,1,2,3,4,5'
-    - cron: '30 5 * * 0,1,2,3,4,5'
-  workflow_dispatch:
-    inputs:
-      XML_SUITE:
-        description: "Path to testNG xml"
-        default: "regression-suite.xml"
-        required: false
-      GROUPS:
-        description: "Group(s) to run"
-        default: "regression"
-        required: true
-      ENV:
-        description: "Environment to run"
-        default: "stage"
-        required: true
-        options:
-          - stage
-          - Prod
+    branches: ["main"]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    env:
+      REPOSITORY_URL: docker.pkg.github.com
+      IMAGE_NAME: ${{ github.repository }}/alerta-cli
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
+      - uses: act10ns/slack@v2
         with:
-          java-version: '11'
-          distribution: 'adopt'
-
-      - name: Build with Maven
-        working-directory: nexa_api-master  # Specify the directory where pom.xml exists
-        run: |
-          mvn clean test -DxmlSuite=${{ github.event.inputs.XML_SUITE }} -Dgroups=${{ github.event.inputs.GROUPS }} -Denv=${{ github.event.inputs.ENV }} | tee result.log
-          echo "##vso[task.setvariable variable=percent]$(grep -oP '\d+(?=% Passed)' result.log || echo '0')"
-
-      - name: Validate Passed Rate
-        if: ${{ github.event.inputs.UP_STREAM != '' }}
-        run: |
-          echo "${{ env.percent }}% Passed Rate"
-          # Add your validation logic here using the passed rate
-          # Example: echo "$PERCENTAGE, $SHA, $REPO"
-
-          # Assuming the validate-dev-repo action script usage
-          # uses: ./.github/actions/validate-dev-repo
-          # with:
-          #   PERCENTAGE: ${{ env.percent }}
-          #   SHA: ${{ github.sha }}
-          #   REPO: ${{ github.repository }}
+          status: starting
+          channel: '#workflows'
+          message: Starting Docker Build and Push...
+        if: always()
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Variables
+        id: vars
+        run: echo "::set-output name=SHORT_COMMIT_ID::$(git rev-parse --short HEAD)"
+      - name: Build image
+        id: docker-build
+        run: >-
+          docker build
+          -t $IMAGE_NAME
+          -t $REPOSITORY_URL/$IMAGE_NAME:${{ steps.vars.outputs.SHORT_COMMIT_ID }}
+          -t $REPOSITORY_URL/$IMAGE_NAME:latest .
+      - name: Docker Login
         env:
-          GITHUB_TOKEN: ${{ secrets.ORG_TOKEN }}
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+        run: docker login $REPOSITORY_URL --username "$DOCKER_USERNAME" --password "$DOCKER_PASSWORD"
+      - name: Publish Image
+        id: docker-push
+        run: docker push $REPOSITORY_URL/$IMAGE_NAME
+
+      - uses: act10ns/slack@v2
+        with:
+          status: ${{ job.status }}
+          steps: ${{ toJson(steps) }}
+          channel: '#workflows'
+        if: always()
