--- a/.github/workflows/NexaAPI.yml
+++ b/.github/workflows/NexaAPI.yml
@@ -1,45 +1,59 @@
-name: Docker Build and Push
-
+name: Nexa API Integration Testing
 on:
   push:
-    branches: ["main"]
-
+    branches:
+      - main
+  schedule:
+    - cron: '15 14 * * 0,1,2,3,4,5'
+    - cron: '30 5 * * 0,1,2,3,4,5'
+  workflow_dispatch:
+    inputs:
+      XML_SUITE:
+        description: "Path to testNG xml"
+        default: "regression-suite.xml"
+        required: false
+      GROUPS:
+        description: "Group(s) to run"
+        default: "regression"
+        required: true
+      ENV:
+        description: "Environment to run"
+        default: "stage"
+        required: true
+        options:
+          - stage
+          - Prod
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      REPOSITORY_URL: docker.pkg.github.com
-      IMAGE_NAME: ${{ github.repository }}/alerta-cli
-      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
     steps:
-      - uses: act10ns/slack@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
         with:
-          status: starting
-          channel: '#workflows'
-          message: Starting Docker Build and Push...
-        if: always()
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Variables
-        id: vars
-        run: echo "::set-output name=SHORT_COMMIT_ID::$(git rev-parse --short HEAD)"
-      - name: Build image
-        id: docker-build
-        run: >-
-          docker build
-          -t $IMAGE_NAME
-          -t $REPOSITORY_URL/$IMAGE_NAME:${{ steps.vars.outputs.SHORT_COMMIT_ID }}
-          -t $REPOSITORY_URL/$IMAGE_NAME:latest .
-      - name: Docker Login
+          java-version: '11'
+          distribution: 'adopt'
+      - name: Build with Maven
+        working-directory: nexa_api-master  # Specify the directory where pom.xml exists
+        run: |
+          mvn clean test -DxmlSuite=${{ github.event.inputs.XML_SUITE }} -Dgroups=${{ github.event.inputs.GROUPS }} -Denv=${{ github.event.inputs.ENV }} | tee result.log
+          echo "##vso[task.setvariable variable=percent]$(grep -oP '\d+(?=% Passed)' result.log || echo '0')"
+      - name: Validate Passed Rate
+        if: ${{ github.event.inputs.UP_STREAM != '' }}
+        run: |
+          echo "${{ env.percent }}% Passed Rate"
+          # Add your validation logic here using the passed rate
+          # Example: echo "$PERCENTAGE, $SHA, $REPO"
+          # Assuming the validate-dev-repo action script usage
+          # uses: ./.github/actions/validate-dev-repo
+          # with:
+          #   PERCENTAGE: ${{ env.percent }}
+          #   SHA: ${{ github.sha }}
+          #   REPO: ${{ github.repository }}
         env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
-        run: docker login $REPOSITORY_URL --username "$DOCKER_USERNAME" --password "$DOCKER_PASSWORD"
-      - name: Publish Image
-        id: docker-push
-        run: docker push $REPOSITORY_URL/$IMAGE_NAME
-
-      - uses: act10ns/slack@v2
+          GITHUB_TOKEN: ${{ secrets.ORG_TOKEN }}
+- uses: act10ns/slack@v2
         with:
           status: ${{ job.status }}
           steps: ${{ toJson(steps) }}
