--- a/.github/workflows/NexaAPI.yml
+++ b/.github/workflows/NexaAPI.yml
@@ -36,44 +36,27 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
           distribution: 'adopt'
-
       - name: Build with Maven
-        working-directory: ./nexa_api-master  # Specify the directory where pom.xml exists
+        working-directory: nexa_api-master  # Specify the directory where pom.xml exists
         run: |
           mvn clean test -DxmlSuite=${{ github.event.inputs.XML_SUITE }} -Dgroups=${{ github.event.inputs.GROUPS }} -Denv=${{ github.event.inputs.ENV }} | tee result.log
-
-      - name: Debug:List files in working directory
-        working-directory: ./nexa_api-master
-        run: ls -alh
-
-      - name: Debug:Display result.log
-        working-directory: ./nexa_api-master
-        run: cat result.log
-
       - name: Parse Test Results
         id: test_results
-        working-directory: ./nexa_api-master
         run: |
           total=$(awk '/Tests run:/ {print $3}' result.log | tail -1)
           failures=$(awk '/Failures:/ {print $6}' result.log | tail -1)
           errors=$(awk '/Errors:/ {print $8}' result.log | tail -1)
           skipped=$(awk '/Skipped:/ {print $10}' result.log | tail -1)
-          if [ -z "$total" ]; then total=0; fi
-          if [ -z "$failures" ]; then failures=0; fi
-          if [ -z "$errors" ]; then errors=0; fi
-          if [ -z "$skipped" ]; then skipped=0; fi
           passed=$((total - failures - errors - skipped))
           echo "total=$total" >> $GITHUB_ENV
           echo "passed=$passed" >> $GITHUB_ENV
           echo "failures=$failures" >> $GITHUB_ENV
           echo "skipped=$skipped" >> $GITHUB_ENV
-
       - name: Send Slack Notification
         if: always()
         uses: slackapi/slack-github-action@v1.23.0
@@ -83,7 +66,7 @@ jobs:
               "text": "Build job has finished for environment: ${{ github.event.inputs.ENV }}.",
               "attachments": [
                 {
-                  "color": "${{ job.status == 'success' ? 'good' : 'danger' }}",
+                  "color": "{{ job.status == 'success' ? 'good' : 'danger' }}",
                   "fields": [
                     {
                       "title": "Total Tests Run",
